[package]
name = "async-event-rs"
version = "0.3.3"
edition = "2024"
authors = ["Junkang Yuan <yuanjunkang@gmail.com>"]
description = "Rust implementation that mimics C#'s async event model"
repository = "https://github.com/fxdmhtt/event-rs"
license = "GPL-2.0"
keywords = ["async", "event"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3.31"
slab = "0.4.10"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["macros", "rt"] }
